@@ -15,6 +15,7 @@ my %attributes = (
 	blib            => 'blib',
 	create_packlist => 1,
 	dist_name       => undef,
+	module_name     => undef,
 	destdir         => undef
 );
 
@@ -36,6 +37,7 @@ sub new {
 		(map { $_ => $args{$_} || {} } qw/install_path install_base_relpaths prefix_relpaths/),
 		map { $_ => exists $args{$_} ? $args{$_} : $attributes{$_} } keys %attributes,
 	);
+	$self{module_name} ||= do { my $module_name = $self{dist_name}; $module_name =~ s/-/::/g; $module_name } if defined $self{dist_name};
 	return bless \%self, $class;
 }
 
@@ -504,9 +506,9 @@ sub install_map {
 	warn "WARNING: Can't figure out install path for types: @skipping\nFiles will not be installed.\n" if @skipping;
 
 	# Write the packlist into the same place as ExtUtils::MakeMaker.
-	if ($self->create_packlist and my $dist_name = $self->dist_name) {
+	if ($self->create_packlist and my $module_name = $self->module_name) {
 		my $archdir = $self->install_destination('arch');
-		my @ext = split /-/, $dist_name;
+		my @ext = split /::/, $module_name;
 		$map{write} = File::Spec->catfile($archdir, 'auto', @ext, '.packlist');
 	}
 
@@ -714,11 +716,15 @@ Sets the location of the blib directory, it defaults to 'blib'.
 
 =attr create_packlist
 
-Controls whether a packlist will be added together with C<dist_name>. Defaults to 1.
+Controls whether a packlist will be added together with C<module_name>. Defaults to 1.
 
 =attr dist_name
 
-The name of the current module. This is required for packlist creation. If undefined (the default)
+The name of the current module.
+
+=attr module_name
+
+The name of the main module of the package. This is required for packlist creation, but in the future it may be replaced by dist_name. It defaults to dist_name =~ s/-/::/gr if dist_name is set.
 
 =attr destdir
 
